horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border:none
+    border:none;
+    overflow-x: hidden;
 }
 
 
@@ -273,7 +274,7 @@
     display: flex;
 }
 #pic img{
-    width: 480px;
+    width: 4200px;
     height: 480px;
 }
 #intro{
